# yamaha-rcp-rs

./: .gitignore  Cargo.toml  README.md
research/: notify_saver.py
src/: lib.rs  main.rs
