[package]
name = "tf-series-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
futures = "0.3.26"
obws = "0.10.0"
time = "0.3.19"
tokio = { version = "1.25.0", features = ["full"] }
