[package]
name = "yamaha-rcp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
log = "0.4.19"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
time = "0.3.15"
tokio = { version = "1.25.0", features = ["full"] }
