[package]
name = "yamaha-rcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Remote control of Yamaha mixing consoles using TCP/IP networking."
documentation = "https://docs.rs/yamaha-rcp"
repository = "https://github.com/BrenekH/yamaha-rcp-rs"
readme = "README.md"
keywords = ["networking", "audio", "mixing", "yamaha"]
categories = ["api-bindings", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.31"
log = "0.4.19"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
time = "0.3.15"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util", "macros"] }

[dev-dependencies]
tokio-test = "0.4.2"
